[package]
name = "bounding_box"
version = "0.1.0"
authors = ["RystaC <rysta.plus@gmail.com>"]
edition = "2018"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.41.0"
gl = "0.14.0"

[build-dependencies]
gl_generator = "0.14.0"
